2000-02-24  Ettore Perazzoli  <ettore@helixcode.com>

	Patch from Marcus Nilsson <marcusn@docs.uu.se>:
	* modules/file-method.c (struct _DirectoryHandle): Made
	`current_entry' a pointer to a `struct dirent *' instead of just a
	`struct dirent'.
	(read_directory): Updated accordingly.
	(directory_handle_new): Allocate `current_entry' with
	`g_malloc()', allocating extra space as required by `readdir_r()'.
	(directory_handle_destroy): Free `current_entry'.

2000-02-22  Ettore Perazzoli  <ettore@helixcode.com>

	* Version 0.1 is released.

2000-02-21  Ettore Perazzoli  <ettore@helixcode.com>

	* libgnomevfs/gnome-vfs-cancellation.c
	(gnome_vfs_cancellation_check): If the cancellation is NULL, just
	return FALSE.
	(gnome_vfs_cancellation_ack): If the cancellation is NULL, just
	return.

	* test/test-xfer.c (xfer_progress_callback): Use
	`GNOME_VFS_SIZE_FORMAT_STR' to match the types.

	* test/test-async-directory.c (main) [!WITH_CORBA]: Do not define
	`ev', so that we don't get annoying compiler warnings.

	* test/test-xfer.c (xfer_progress_callback): Add casts.

	* test/test-directory-visit.c (directory_visit_callback): Add
	cast.

	* test/test-directory.c (print_list): Add cast.

	* test/test-async-directory.c (main): Removed unused variable.

	* modules/translate-method.c (tr_do_read_directory): Added cast to
	placate the compiler.

	* modules/file-method.c (do_get_file_info_from_handle):
	s/gnome_vfs_extract_short_name/gnome_vfs_uri_extract_short_name/.
	`gnome_vfs_extract_short_name' does not even exist!

	* modules/extfs-method.c: Add missing NULL pointer in
	initialization of `method'.

	* libgnomevfs-corba/gnome-vfs-slave.c (serve_channel_read): Use
	`GNOMEVFSFileSize' instead of `gulong'.
	(serve_channel_write): Likewise.

	* modules/Makefile.am (libhttp_la_LIBADD): Do not link the HTTP
	module with `-lghttp' (we don't actually use it).

2000-02-21  Jonathan Blandford  <jrb@redhat.com>

	* libgnomevfs/gnome-vfs-cancellation.c